fix: remove url from getting truncated

--- a/client/src/components/Cluster/ClusterPage.scss
+++ b/client/src/components/Cluster/ClusterPage.scss
@@ -109,8 +109,8 @@
             border: 1px solid #ccc;
             display: flex;
             flex-direction: row;
+            flex-wrap: wrap;
             margin: 8px 8px 0;
-            max-width: 180px;
             padding: 8px;
             position: relative;
             white-space: nowrap;
